--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -86,7 +86,6 @@ body a:hover{
 	float: left;
 	height:92px;
 	padding: 30px 0px 20px 10px;
-/*	background: green;*/
 }
 
 .search-width{
@@ -269,6 +268,7 @@ body a:hover{
 .section-inner-slide{
 	height: 415px;
 	min-width: 1200px;
+	overflow: hidden;
 }
 
 .section-inner-slide ul{
@@ -295,6 +295,11 @@ body a:hover{
 	text-align: center;
 }
 
+.playlist-list{
+	position: relative;
+	width: 6000px;
+	left: 0;
+}
 .link-white a{
 	color: white;
 }
@@ -404,3 +409,93 @@ body a:hover{
 	text-align: center;
 	margin-top: 50px;
 }
+
+.slide_page{
+	z-index: 3;
+	height: 0;
+}
+.slide_left{
+	position: relative;
+	float: left;
+	top: 360px;
+	width: 100px;
+	height: 100px;
+	z-index: 4;
+	background: #31c27c;
+}
+
+.slide_right{
+	position: relative;
+	top: 360px;
+	float: right;
+	width: 100px;
+	height: 100px;
+	z-index: 4;
+	background: #31c27c;
+}
+
+.js_left i{
+	padding:40px 0 0 40px;
+	width: 100px;
+	height: 100px;
+}
+
+.js_right i{
+	padding:40px 0 0 40px;
+	width: 100px;
+	height: 100px;
+}
+/*
+.mod_slide_action {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.slide_action--left, .slide_action__btn--left {
+    left: 0;
+}
+
+.slide_action {
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+}
+
+.slide_action__btn--left {
+    transform: translateX(-100%);
+}
+
+.slide_action__btn {
+    position: absolute;
+    top: 50%;
+    margin-top: -54px;
+    width: 72px;
+    height: 108px;
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr='#66999999', endColorstr='#66999999');
+    background: url(#?max_age=2592000);
+    background: rgba(153,153,153,.4);
+    opacity: 0;
+    visibility: none;
+    transition-property: opacity,transform;
+    transition-duration: .5s;
+    z-index: 2;
+}
+
+.slide_action__arrow--left {
+    left: 28px;
+    background-position: -180px 0;
+}
+.slide_action__arrow {
+    position: absolute;
+    top: 50%;
+    margin-top: -9px;
+    background-image: url(img/icon_sprite.png?max_age=2592000&v=f059f1bb8aed4398fe054f423a3db305);
+    background-image: -webkit-image-set(url(img/icon_sprite.png) 1x,url(img/icon_sprite@2x.png) 2x);
+    width: 11px;
+    height: 18px;
+}*/
